Add route to add account and get account.

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -5,5 +5,22 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TransactionDbSettings": {
+    "Database": "Financial",
+    "ConnectionUri": "mongodb://localhost:27018/?readPreference=primary&ssl=false"
+  },
+  "ReadOnlyDbSettings": {
+    "Database": "Financial",
+    "ConnectionUri": "mongodb://localhost:27018/?ssl=false"
+  },
+  "ClientSettings": {
+    "Notification": {
+      "Url": "http://localhost:5151",
+      "CustomValues": {
+        "ChatId": 1190356349
+      }
+    }
+  }
+
 }
